crates/runtime/src/tests/snapshots/query_join_natural_full_outer.snap
---
source: crates/runtime/src/tests/queries.rs
description: "\"SELECT *\n  FROM d1 NATURAL FULL OUTER JOIN d2\n  ORDER BY ID;\""
snapshot_kind: text
---
(
    Ok(
        Statement(
            Query(
                Query {
                    with: None,
                    body: Select(
                        Select {
                            select_token: TokenWithSpan {
                                token: Word(
                                    Word {
                                        value: "SELECT",
                                        quote_style: None,
                                        keyword: SELECT,
                                    },
                                ),
                                span: Span(Location(0,0)..Location(0,0)),
                            },
                            distinct: None,
                            top: None,
                            top_before_distinct: false,
                            projection: [
                                Wildcard(
                                    WildcardAdditionalOptions {
                                        wildcard_token: TokenWithSpan {
                                            token: Mul,
                                            span: Span(Location(0,0)..Location(0,0)),
                                        },
                                        opt_ilike: None,
                                        opt_exclude: None,
                                        opt_except: None,
                                        opt_replace: None,
                                        opt_rename: None,
                                    },
                                ),
                            ],
                            into: None,
                            from: [
                                TableWithJoins {
                                    relation: Table {
                                        name: ObjectName(
                                            [
                                                Ident {
                                                    value: "d1",
                                                    quote_style: None,
                                                    span: Span(Location(0,0)..Location(0,0)),
                                                },
                                            ],
                                        ),
                                        alias: None,
                                        args: None,
                                        with_hints: [],
                                        version: None,
                                        with_ordinality: false,
                                        partitions: [],
                                        json_path: None,
                                    },
                                    joins: [
                                        Join {
                                            relation: Table {
                                                name: ObjectName(
                                                    [
                                                        Ident {
                                                            value: "d2",
                                                            quote_style: None,
                                                            span: Span(Location(0,0)..Location(0,0)),
                                                        },
                                                    ],
                                                ),
                                                alias: None,
                                                args: None,
                                                with_hints: [],
                                                version: None,
                                                with_ordinality: false,
                                                partitions: [],
                                                json_path: None,
                                            },
                                            global: false,
                                            join_operator: FullOuter(
                                                Natural,
                                            ),
                                        },
                                    ],
                                },
                            ],
                            lateral_views: [],
                            prewhere: None,
                            selection: None,
                            group_by: Expressions(
                                [],
                                [],
                            ),
                            cluster_by: [],
                            distribute_by: [],
                            sort_by: [],
                            having: None,
                            named_window: [],
                            qualify: None,
                            window_before_qualify: false,
                            value_table_mode: None,
                            connect_by: None,
                        },
                    ),
                    order_by: Some(
                        OrderBy {
                            exprs: [
                                OrderByExpr {
                                    expr: Identifier(
                                        Ident {
                                            value: "ID",
                                            quote_style: None,
                                            span: Span(Location(0,0)..Location(0,0)),
                                        },
                                    ),
                                    asc: None,
                                    nulls_first: None,
                                    with_fill: None,
                                },
                            ],
                            interpolate: None,
                        },
                    ),
                    limit: None,
                    limit_by: [],
                    offset: None,
                    fetch: None,
                    locks: [],
                    for_clause: None,
                    settings: None,
                    format_clause: None,
                },
            ),
        ),
    ),
    Ok(
        [
            "Sort: d1.id ASC NULLS LAST",
            "  Projection: *",
            "    Full Join: Using d1.id = d2.id",
            "      TableScan: d1",
            "      TableScan: d2",
        ],
    ),
    Ok(
        [
            "+----+------+-------+",
            "| id | name | value |",
            "+----+------+-------+",
            "| 1  | a    | xx    |",
            "| 2  | b    | yy    |",
            "| 4  | c    |       |",
            "|    |      | zz    |",
            "+----+------+-------+",
        ],
    ),
)
